kubernetes/k8s-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  labels:
    app: github-webhook-fanout
  name: github-webhook-fanout-gw
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - gh-argo-fanout.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
